presence section added

--- a/about.html
+++ b/about.html
@@ -117,6 +117,42 @@
             </div>
         </div>
     </section>
+    <section id="numbers">
+        <div class="container">
+            <div class="main">
+                <div class="head">
+                    <p class="title gradient-text">PRESENCE</p>
+                    <p class="desc">Expplain boaut hris heer whith eg</p>
+                </div>
+                <div class="presence-row">
+                    <div class="presence-card">
+                        <div class="presence-content">
+                            <p class="content-head gradient-black-text">22+</p>
+                            <p class="content-desc">Plants</p>
+                        </div>
+                    </div>
+                    <div class="presence-card">
+                        <div class="presence-content">
+                            <p class="content-head gradient-black-text">250+</p>
+                            <p class="content-desc">Vehicles</p>
+                        </div>
+                    </div>
+                    <div class="presence-card">
+                        <div class="presence-content">
+                            <p class="content-head gradient-black-text">70L +</p>
+                            <p class="content-desc">Concrete Delivered (Cu.m)</p>
+                        </div>
+                    </div>
+                    <div class="presence-card">
+                        <div class="presence-content">
+                            <p class="content-head gradient-black-text">42L +</p>
+                            <p class="content-desc">Diesel Delivered (Ltr)</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="layout-2" id="our-mission">
         <div class="container">
             <div class="main">
