presence section added

--- a/about.html
+++ b/about.html
@@ -117,7 +117,7 @@
             </div>
         </div>
     </section>
-    <section id="numbers">
+    <section id="presence">
         <div class="container">
             <div class="main">
                 <div class="head">
