--- a/index.html
+++ b/index.html
@@ -104,168 +104,176 @@
             <img src="img/hero-section-bg.png" class="hero-image" alt="hero"/>
         </div>
     </section>
-    <section id="the-group">
-        <div class="container">
-            <div class="main">
-                <div class="head">
-                    <p class="title gradient-text">THE GROUP</p>
-                    <p class="desc">Our Group Companies</p>
+    <div class="section">
+        <div id="the-group">
+            <div class="container">
+                <div class="main">
+                    <div class="head">
+                        <p class="title gradient-text">THE GROUP</p>
+                        <p class="desc">Our Group Companies</p>
+                    </div>
                 </div>
             </div>
         </div>
-    </section>
-    <section class="layout-2" id="group-1">
-        <div class="container">
-            <div class="main">
-                <div class="left-side">
-                    <img src="img/stock-img.jpeg" alt="hero" class="company-2-img"/>
-                </div>
-                <div class="right-side">
-                    <p class="title gradient-black-text">Bhamra Concrete Private Limited</p>
-                    <div class="divider"></div>
-                    <p class="desc">Bhamra Concrete Private Limited, a trusted name in the concrete transportation
-                        industry, boasts a formidable fleet of over 250 Transit Mixers. Our commitment to excellence is
-                        evident as we deliver Ready Mix Concrete seamlessly across the entire expanse of Mumbai. With a
-                        market share exceeding a quarter, we proudly stand as a key player in RMC Logistics in the
-                        Mumbai region. Our expansive fleet and market dominance underscore our dedication to reliable
-                        and efficient concrete delivery, making us the preferred choice for projects in this dynamic
-                        urban landscape.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="layout-3" id="group-2">
-        <div class="container">
-            <div class="main">
-                <div class="left-side">
-                    <p class="title gradient-black-text">Fuelmen Services Private Limited</p>
-                    <div class="divider"></div>
-                    <p class="desc">Fuelmen Services Private Limited is a pioneer in doorstep diesel delivery, providing
-                        an innovative solution to meet your fuel needs. Our mobile fuel tanker fleet ensures that diesel
-                        is conveniently delivered right to your doorstep. With a robust operational model, we
-                        consistently sell an impressive two lakhs litres of diesel monthly, catering to the diverse fuel
-                        requirements of our valued customers. Fuelmen Services is your reliable partner for efficient
-                        and hassle-free fuel supply, committed to enhancing convenience in every drop.</p>
-                </div>
-                <div class="right-side">
-                    <img src="img/stock-img.jpeg" alt="hero" class="company-3-img"/>
+        <section class="layout-2 inner-section" id="group-1">
+            <div class="container">
+                <div class="main">
+                    <div class="left-side">
+                        <img src="img/stock-img.jpeg" alt="hero" class="company-2-img"/>
+                    </div>
+                    <div class="right-side">
+                        <p class="title gradient-black-text">Bhamra Concrete Private Limited</p>
+                        <div class="divider"></div>
+                        <p class="desc">Bhamra Concrete Private Limited, a trusted name in the concrete transportation
+                            industry, boasts a formidable fleet of over 250 Transit Mixers. Our commitment to excellence is
+                            evident as we deliver Ready Mix Concrete seamlessly across the entire expanse of Mumbai. With a
+                            market share exceeding a quarter, we proudly stand as a key player in RMC Logistics in the
+                            Mumbai region. Our expansive fleet and market dominance underscore our dedication to reliable
+                            and efficient concrete delivery, making us the preferred choice for projects in this dynamic
+                            urban landscape.</p>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
-    <section id="services">
-        <div class="container">
-            <div class="main">
-                <div class="head">
-                    <p class="title gradient-text">CORE COMPETENCE</p>
-                    <p class="desc">Services that we provide</p>
+        </section>
+        <section class="layout-3" id="group-2">
+            <div class="container">
+                <div class="main">
+                    <div class="left-side">
+                        <p class="title gradient-black-text">Fuelmen Services Private Limited</p>
+                        <div class="divider"></div>
+                        <p class="desc">Fuelmen Services Private Limited is a pioneer in doorstep diesel delivery, providing
+                            an innovative solution to meet your fuel needs. Our mobile fuel tanker fleet ensures that diesel
+                            is conveniently delivered right to your doorstep. With a robust operational model, we
+                            consistently sell an impressive two lakhs litres of diesel monthly, catering to the diverse fuel
+                            requirements of our valued customers. Fuelmen Services is your reliable partner for efficient
+                            and hassle-free fuel supply, committed to enhancing convenience in every drop.</p>
+                    </div>
+                    <div class="right-side">
+                        <img src="img/stock-img.jpeg" alt="hero" class="company-3-img"/>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
-    <section class="layout-2" id="service-1">
-        <div class="container">
-            <div class="main">
-                <div class="left-side">
-                    <img src="img/stock-img.jpeg" alt="hero" class="company-2-img"/>
-                </div>
-                <div class="right-side">
-                    <p class="title gradient-black-text">In-House Maintenance Team</p>
-                    <div class="divider"></div>
-                    <p class="desc">Our commitment to reliability and efficiency goes beyond transportation.
-                        With our dedicated in-house maintenance team, we ensure that our fleet of transit
-                        mixers operates seamlessly with minimal breakdowns. Regular maintenance,
-                        inspections, and swift repairs are integral to our approach, ensuring that your
-                        concrete transportation needs are met without disruptions.</p>
+        </section>
+    </div>
+    <div class="section">
+        <section id="services">
+            <div class="container">
+                <div class="main">
+                    <div class="head">
+                        <p class="title gradient-text">CORE COMPETENCE</p>
+                        <p class="desc">Services that we provide</p>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
-    <section class="layout-3" id="service-2">
-        <div class="container">
-            <div class="main">
-                <div class="left-side">
-                    <p class="title gradient-black-text">Transit Mixers on Taxi Basis</p>
-                    <div class="divider"></div>
-                    <p class="desc">Experience the convenience of concrete transportation with our Transit
-                        Mixers on Taxi Basis service. We offer a flexible and efficient solution that allows
-                        you to access our transit mixers when and where you need them. This taxi-based
-                        approach ensures that you have the right equipment at your disposal, precisely when
-                        your projects demand it, minimizing delays and optimizing your construction
-                        workflow.</p>
-                </div>
-                <div class="right-side">
-                    <img src="img/stock-img.jpeg" alt="hero" class="company-3-img"/>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="layout-2" id="service-3">
-        <div class="container">
-            <div class="main">
-                <div class="left-side">
-                    <img src="img/stock-img.jpeg" alt="hero" class="company-2-img"/>
-                </div>
-                <div class="right-side">
-                    <p class="title gradient-black-text">Own Fueling Diesel Tankers</p>
-                    <div class="divider"></div>
-                    <p class="desc">Our commitment to reliability and efficiency goes beyond transportation.
-                        With our dedicated in-house maintenance team, we ensure that our fleet of transit
-                        mixers operates seamlessly with minimal breakdowns. Regular maintenance,
-                        inspections, and swift repairs are integral to our approach, ensuring that your
-                        concrete transportation needs are met without disruptions.</p>
+        </section>
+        <section class="layout-2 inner-section" id="service-1">
+            <div class="container">
+                <div class="main">
+                    <div class="left-side">
+                        <img src="img/stock-img.jpeg" alt="hero" class="company-2-img"/>
+                    </div>
+                    <div class="right-side">
+                        <p class="title gradient-black-text">In-House Maintenance Team</p>
+                        <div class="divider"></div>
+                        <p class="desc">Our commitment to reliability and efficiency goes beyond transportation.
+                            With our dedicated in-house maintenance team, we ensure that our fleet of transit
+                            mixers operates seamlessly with minimal breakdowns. Regular maintenance,
+                            inspections, and swift repairs are integral to our approach, ensuring that your
+                            concrete transportation needs are met without disruptions.</p>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
-    <section class="layout-3" id="service-4">
-        <div class="container">
-            <div class="main">
-                <div class="left-side">
-                    <p class="title gradient-black-text">Experienced Personnel /Management</p>
-                    <div class="divider"></div>
-                    <p class="desc">Experience the convenience of concrete transportation with our Transit
-                        Mixers on Taxi Basis service. We offer a flexible and efficient solution that allows
-                        you to access our transit mixers when and where you need them. This taxi-based
-                        approach ensures that you have the right equipment at your disposal, precisely when
-                        your projects demand it, minimizing delays and optimizing your construction
-                        workflow.</p>
-                </div>
-                <div class="right-side">
-                    <img src="img/stock-img.jpeg" alt="hero" class="company-3-img"/>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section id="client">
-        <div class="container">
-            <div class="main">
-                <p class="title gradient-text">Clients</p>
-                <p class="desc">Some of are wellknown clients</p>
-                <div class="clients-row">
-                    <img src="img/clients/ACC_Cleint.png" alt="ACC_Cleint" class="client-img"/>
-                    <img src="img/clients/Relcon_Client.png" alt="Relcon_Client" class="client-img"/>
-                    <img src="img/clients/Prism_Cleint.png" alt="Prism_Cleint" class="client-img"/>
-                    <img src="img/clients/Nuvoco_Client.png" alt="Nuvoco_Client" class="client-img"/>
-                    <img src="img/clients/JSW_Client.png" alt="JSW_Client" class="client-img"/>
-                    <img src="img/clients/indiacretermc_Client.jpg" alt="indiacretermc_Client" class="client-img"/>
-                    <img src="img/clients/Godrej_Client.png" alt="Godrej_Client" class="client-img"/>
-                    <img src="img/clients/Client_skyway.jpg" alt="Client_skyway" class="client-img"/>
-                    <img src="img/clients/Ultratech_client.png" alt="Ultratech_client" class="client-img"/>
+        </section>
+        <section class="layout-3 inner-section" id="service-2">
+            <div class="container">
+                <div class="main">
+                    <div class="left-side">
+                        <p class="title gradient-black-text">Transit Mixers on Taxi Basis</p>
+                        <div class="divider"></div>
+                        <p class="desc">Experience the convenience of concrete transportation with our Transit
+                            Mixers on Taxi Basis service. We offer a flexible and efficient solution that allows
+                            you to access our transit mixers when and where you need them. This taxi-based
+                            approach ensures that you have the right equipment at your disposal, precisely when
+                            your projects demand it, minimizing delays and optimizing your construction
+                            workflow.</p>
+                    </div>
+                    <div class="right-side">
+                        <img src="img/stock-img.jpeg" alt="hero" class="company-3-img"/>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
-    <div class="contact-us">
-        <div class="content-side">
-            <p class="content-title gradient-text">Reach out!</p>
-            <p class="address"><b>Address:</b> &nbsp; 114, Sai Commercial Building, BKS Devshi Marg, Deonar, Govandi,
-                Mumbai - 400 088</p>
-            <p class="phone"><b>Contact:</b> 022-35647986, 9004002324
-            <p class="mail"><b>Email:</b> bhamragroup@gmail.com
-        </div>
-        <div class="cta-side">
-            <img src="img/maps.png" alt="maps"/>
+        </section>
+        <section class="layout-2 inner-section" id="service-3">
+            <div class="container">
+                <div class="main">
+                    <div class="left-side">
+                        <img src="img/stock-img.jpeg" alt="hero" class="company-2-img"/>
+                    </div>
+                    <div class="right-side">
+                        <p class="title gradient-black-text">Own Fueling Diesel Tankers</p>
+                        <div class="divider"></div>
+                        <p class="desc">Our commitment to reliability and efficiency goes beyond transportation.
+                            With our dedicated in-house maintenance team, we ensure that our fleet of transit
+                            mixers operates seamlessly with minimal breakdowns. Regular maintenance,
+                            inspections, and swift repairs are integral to our approach, ensuring that your
+                            concrete transportation needs are met without disruptions.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="layout-3" id="service-4">
+            <div class="container">
+                <div class="main">
+                    <div class="left-side">
+                        <p class="title gradient-black-text">Experienced Personnel /Management</p>
+                        <div class="divider"></div>
+                        <p class="desc">Experience the convenience of concrete transportation with our Transit
+                            Mixers on Taxi Basis service. We offer a flexible and efficient solution that allows
+                            you to access our transit mixers when and where you need them. This taxi-based
+                            approach ensures that you have the right equipment at your disposal, precisely when
+                            your projects demand it, minimizing delays and optimizing your construction
+                            workflow.</p>
+                    </div>
+                    <div class="right-side">
+                        <img src="img/stock-img.jpeg" alt="hero" class="company-3-img"/>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+    <div class="section">
+        <section id="client">
+            <div class="container">
+                <div class="main">
+                    <p class="title gradient-text">Clients</p>
+                    <p class="desc">Some of are wellknown clients</p>
+                    <div class="clients-row">
+                        <img src="img/clients/ACC_Cleint.png" alt="ACC_Cleint" class="client-img"/>
+                        <img src="img/clients/Relcon_Client.png" alt="Relcon_Client" class="client-img"/>
+                        <img src="img/clients/Prism_Cleint.png" alt="Prism_Cleint" class="client-img"/>
+                        <img src="img/clients/Nuvoco_Client.png" alt="Nuvoco_Client" class="client-img"/>
+                        <img src="img/clients/JSW_Client.png" alt="JSW_Client" class="client-img"/>
+                        <img src="img/clients/indiacretermc_Client.jpg" alt="indiacretermc_Client" class="client-img"/>
+                        <img src="img/clients/Godrej_Client.png" alt="Godrej_Client" class="client-img"/>
+                        <img src="img/clients/Client_skyway.jpg" alt="Client_skyway" class="client-img"/>
+                        <img src="img/clients/Ultratech_client.png" alt="Ultratech_client" class="client-img"/>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+    <div class="section">
+        <div class="contact-us">
+            <div class="content-side">
+                <p class="content-title gradient-text">Reach out!</p>
+                <p class="address"><b>Address:</b> &nbsp; 114, Sai Commercial Building, BKS Devshi Marg, Deonar, Govandi,
+                    Mumbai - 400 088</p>
+                <p class="phone"><b>Contact:</b> 022-35647986, 9004002324
+                <p class="mail"><b>Email:</b> bhamragroup@gmail.com
+            </div>
+            <div class="cta-side">
+                <img src="img/maps.png" alt="maps"/>
+            </div>
         </div>
     </div>
 </div>
