spacing fixed for about us page

--- a/about.html
+++ b/about.html
@@ -73,120 +73,129 @@
     </div>
 </header>
 <div class="content">
-    <section class="layout-3" id="who-we-are">
-        <div class="container">
-            <div class="main">
-                <div class="head">
-                    <p class="title gradient-text">WHO WE ARE</p>
-                    <p class="desc">At BHAMRA CONCRETE PRIVATE LIMITED, we are committed to providing the highest level
-                        of customer service and satisfaction. We strive to exceed expectations with every interaction
-                        and delivery.
-                        <br/><br/>
-                        With 90% of the Fleet of BS VI, we are committed towards sustainability, reducing the
-                        environmental pollution due to our vehicle operation.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section id="leadership">
-        <div class="container">
-            <div class="main">
-                <p class="title gradient-text">LEADERSHIP</p>
-                <p class="desc">Write some content related to the leadership of both of them</p>
-                <div class="leaders">
-                    <div class="leader">
-                        <div class="img">
-                            <img src="img/face/Manmeet.jpg" alt="hero"/>
-                        </div>
-                        <div class="desc">
-                            <p class="name">Mr. Manmeet Singh Bhamra</p>
-                            <p class="role">Director</p>
-                        </div>
-                    </div>
-                    <div class="leader">
-                        <div class="img">
-                            <img src="img/face/Chanmeet.jpg" alt="hero" class="company-3-img"/>
-                        </div>
-                        <div class="desc">
-                            <p class="name">Mr. Chanmeet Singh Bhamra</p>
-                            <p class="role">Director</p>
-                        </div>
+    <div class="section">
+        <section class="layout-3" id="who-we-are">
+            <div class="container">
+                <div class="main">
+                    <div class="head">
+                        <p class="title gradient-text">WHO WE ARE</p>
+                        <p class="desc">At BHAMRA CONCRETE PRIVATE LIMITED, we are committed to providing the highest level
+                            of customer service and satisfaction. We strive to exceed expectations with every interaction
+                            and delivery.
+                            <br/><br/>
+                            With 90% of the Fleet of BS VI, we are committed towards sustainability, reducing the
+                            environmental pollution due to our vehicle operation.
+                        </p>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
-    <section id="presence">
-        <div class="container">
-            <div class="main">
-                <div class="head">
-                    <p class="title gradient-text">PRESENCE</p>
-                    <p class="desc">Expplain boaut hris heer whith eg</p>
-                </div>
-                <div class="presence-row">
-                    <div class="presence-card">
-                        <div class="presence-content">
-                            <p class="content-head gradient-black-text">22+</p>
-                            <p class="content-desc">Plants</p>
+        </section>
+    </div>
+    <div class="section">
+        <section id="leadership">
+            <div class="container">
+                <div class="main">
+                    <p class="title gradient-text">LEADERSHIP</p>
+                    <p class="desc">Write some content related to the leadership of both of them</p>
+                    <div class="leaders">
+                        <div class="leader">
+                            <div class="img">
+                                <img src="img/face/Manmeet.jpg" alt="hero"/>
+                            </div>
+                            <div class="desc">
+                                <p class="name">Mr. Manmeet Singh Bhamra</p>
+                                <p class="role">Director</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="presence-card">
-                        <div class="presence-content">
-                            <p class="content-head gradient-black-text">250+</p>
-                            <p class="content-desc">Vehicles</p>
-                        </div>
-                    </div>
-                    <div class="presence-card">
-                        <div class="presence-content">
-                            <p class="content-head gradient-black-text">70L +</p>
-                            <p class="content-desc">Concrete Delivered (Cu.m)</p>
-                        </div>
-                    </div>
-                    <div class="presence-card">
-                        <div class="presence-content">
-                            <p class="content-head gradient-black-text">42L +</p>
-                            <p class="content-desc">Diesel Delivered (Ltr)</p>
+                        <div class="leader">
+                            <div class="img">
+                                <img src="img/face/Chanmeet.jpg" alt="hero" class="company-3-img"/>
+                            </div>
+                            <div class="desc">
+                                <p class="name">Mr. Chanmeet Singh Bhamra</p>
+                                <p class="role">Director</p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
-    <section class="layout-2" id="our-mission">
-        <div class="container">
-            <div class="main">
-                <div class="left-side">
-                    <img src="img/stock-img.jpeg" alt="hero" class="company-2-img"/>
-                </div>
-                <div class="right-side">
-                    <p class="title gradient-text">Our Mision</p>
-                    <div class="divider"></div>
-                    <p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros,
-                        pulvinar facilisis justo mollis, auctor consequat urna. Morbi a bibendum metus.
-                        Donec scelerisque sollicitudin enim eu venenatis. Duis tincidunt laoreet ex,
-                        in pretium orci vestibulum eget. <br/> auctor consequat urna. Morbi a bibendum metus.
-                        Donec scelerisque sollicitudin enim eu venenatis. Duis tincidunt laoreet ex,
-                        in pretium orci vestibulum eget</p>
+        </section>
+    </div>
+    <div class="section">
+        <section id="presence">
+            <div class="container">
+                <div class="main">
+                    <div class="head">
+                        <p class="title gradient-text">PRESENCE</p>
+                        <p class="desc">Expplain boaut hris heer whith eg</p>
+                    </div>
+                    <div class="presence-row">
+                        <div class="presence-card">
+                            <div class="presence-content">
+                                <p class="content-head gradient-black-text">22+</p>
+                                <p class="content-desc">Plants</p>
+                            </div>
+                        </div>
+                        <div class="presence-card">
+                            <div class="presence-content">
+                                <p class="content-head gradient-black-text">250+</p>
+                                <p class="content-desc">Vehicles</p>
+                            </div>
+                        </div>
+                        <div class="presence-card">
+                            <div class="presence-content">
+                                <p class="content-head gradient-black-text">70L +</p>
+                                <p class="content-desc">Concrete Delivered (Cu.m)</p>
+                            </div>
+                        </div>
+                        <div class="presence-card">
+                            <div class="presence-content">
+                                <p class="content-head gradient-black-text">42L +</p>
+                                <p class="content-desc">Diesel Delivered (Ltr)</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
-    <section class="layout-3" id="our-vision">
-        <div class="container">
-            <div class="main">
-                <div class="left-side">
-                    <p class="title gradient-text">Our Vision</p>
-                    <div class="divider"></div>
-                    <p class="desc">We are operating with a vision to Delivery 2.5 Milliom Cu.m of RMC every month by
-                        the year 2030</p>
-                </div>
-                <div class="right-side">
-                    <img src="img/stock-img.jpeg" alt="hero" class="company-3-img"/>
+        </section>
+    </div>
+    <div class="section">
+        <section class="layout-2 inner-section" id="our-mission">
+            <div class="container">
+                <div class="main">
+                    <div class="left-side">
+                        <img src="img/stock-img.jpeg" alt="hero" class="company-2-img"/>
+                    </div>
+                    <div class="right-side">
+                        <p class="title gradient-text">Our Mision</p>
+                        <div class="divider"></div>
+                        <p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nisl eros,
+                            pulvinar facilisis justo mollis, auctor consequat urna. Morbi a bibendum metus.
+                            Donec scelerisque sollicitudin enim eu venenatis. Duis tincidunt laoreet ex,
+                            in pretium orci vestibulum eget. <br/> auctor consequat urna. Morbi a bibendum metus.
+                            Donec scelerisque sollicitudin enim eu venenatis. Duis tincidunt laoreet ex,
+                            in pretium orci vestibulum eget</p>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
+        <section class="layout-3" id="our-vision">
+            <div class="container">
+                <div class="main">
+                    <div class="left-side">
+                        <p class="title gradient-text">Our Vision</p>
+                        <div class="divider"></div>
+                        <p class="desc">We are operating with a vision to Delivery 2.5 Milliom Cu.m of RMC every month by
+                            the year 2030</p>
+                    </div>
+                    <div class="right-side">
+                        <img src="img/stock-img.jpeg" alt="hero" class="company-3-img"/>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+
 </div>
 <footer>
     Designed & Developed by <a href="https://mithiljain.com"> &nbsp;Mithil Jain</a>
