footer sorted out

--- a/about.html
+++ b/about.html
@@ -100,20 +100,10 @@
                     <div class="leaders">
                         <div class="leader">
                             <div class="img">
-                                <img src="img/face/Manmeet.jpg" alt="hero"/>
+                                <img src="img/face/leaders.jpeg" alt="hero"/>
                             </div>
                             <div class="desc">
-                                <p class="name">Mr. Manmeet Singh Bhamra</p>
-                                <p class="role">Director</p>
-                            </div>
-                        </div>
-                        <div class="leader">
-                            <div class="img">
-                                <img src="img/face/Chanmeet.jpg" alt="hero" class="company-3-img"/>
-                            </div>
-                            <div class="desc">
-                                <p class="name">Mr. Chanmeet Singh Bhamra</p>
-                                <p class="role">Director</p>
+                                <p class="name">Mr. Manmeet Singh Bhamra & Mr. Chanmeet Singh Bhamra</p>
                             </div>
                         </div>
                     </div>
