--- a/index.html
+++ b/index.html
@@ -125,10 +125,13 @@
                         <p class="title gradient-black-text">Bhamra Concrete Private Limited</p>
                         <div class="divider"></div>
                         <p class="desc">Bhamra Concrete Private Limited, a trusted name in the concrete transportation
-                            industry, boasts a formidable fleet of over 250 Transit Mixers. Our commitment to excellence is
-                            evident as we deliver Ready Mix Concrete seamlessly across the entire expanse of Mumbai. With a
+                            industry, boasts a formidable fleet of over 250 Transit Mixers. Our commitment to excellence
+                            is
+                            evident as we deliver Ready Mix Concrete seamlessly across the entire expanse of Mumbai.
+                            With a
                             market share exceeding a quarter, we proudly stand as a key player in RMC Logistics in the
-                            Mumbai region. Our expansive fleet and market dominance underscore our dedication to reliable
+                            Mumbai region. Our expansive fleet and market dominance underscore our dedication to
+                            reliable
                             and efficient concrete delivery, making us the preferred choice for projects in this dynamic
                             urban landscape.</p>
                     </div>
@@ -141,11 +144,15 @@
                     <div class="left-side">
                         <p class="title gradient-black-text">Fuelmen Services Private Limited</p>
                         <div class="divider"></div>
-                        <p class="desc">Fuelmen Services Private Limited is a pioneer in doorstep diesel delivery, providing
-                            an innovative solution to meet your fuel needs. Our mobile fuel tanker fleet ensures that diesel
+                        <p class="desc">Fuelmen Services Private Limited is a pioneer in doorstep diesel delivery,
+                            providing
+                            an innovative solution to meet your fuel needs. Our mobile fuel tanker fleet ensures that
+                            diesel
                             is conveniently delivered right to your doorstep. With a robust operational model, we
-                            consistently sell an impressive two lakhs litres of diesel monthly, catering to the diverse fuel
-                            requirements of our valued customers. Fuelmen Services is your reliable partner for efficient
+                            consistently sell an impressive two lakhs litres of diesel monthly, catering to the diverse
+                            fuel
+                            requirements of our valued customers. Fuelmen Services is your reliable partner for
+                            efficient
                             and hassle-free fuel supply, committed to enhancing convenience in every drop.</p>
                     </div>
                     <div class="right-side">
@@ -262,22 +269,25 @@
             </div>
         </section>
     </div>
-    <div class="section">
+    <div class="section footer-bg">
         <div class="contact-us">
             <div class="content-side">
                 <p class="content-title gradient-text">Reach out!</p>
-                <p class="address"><b>Address:</b> &nbsp; 114, Sai Commercial Building, BKS Devshi Marg, Deonar, Govandi,
+                <p class="address"><b>Address:</b> &nbsp; 114, Sai Commercial Building, BKS Devshi Marg, Deonar,
+                    Govandi,
                     Mumbai - 400 088</p>
                 <p class="phone"><b>Contact:</b> 022-35647986, 9004002324
                 <p class="mail"><b>Email:</b> bhamragroup@gmail.com
             </div>
             <div class="cta-side">
-                <img src="img/maps.png" alt="maps"/>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3684.6726500905793!2d72.9124947096736!3d19.04749202311294!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c6093a944e21%3A0x4100083198c7136f!2sSai%20Commercial%20Centre%20Co-op.%20Society%20Ltd.!5e0!3m2!1sen!2sin!4v1703481627768!5m2!1sen!2sin"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
     </div>
 </div>
-<footer>
+<footer class="footer-bg">
     Designed & Developed by <a href="https://mithiljain.com"> &nbsp; Mithil Jain</a>
 </footer>
 </body>
