footer fixed for home and about

--- a/about.html
+++ b/about.html
@@ -185,11 +185,27 @@
             </div>
         </section>
     </div>
-
+    <div class="section footer-bg" id="footer">
+        <div class="contact-us" >
+            <div class="content-side">
+                <p class="content-title gradient-text">Reach out!</p>
+                <p class="address"><b>Address:</b> &nbsp; 114, Sai Commercial Building, BKS Devshi Marg, Deonar,
+                    Govandi,
+                    Mumbai - 400 088</p>
+                <p class="phone"><b>Contact:</b> 022-35647986, 9004002324
+                <p class="mail"><b>Email:</b> bhamragroup@gmail.com
+            </div>
+            <div class="cta-side">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3684.6726500905793!2d72.9124947096736!3d19.04749202311294!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c6093a944e21%3A0x4100083198c7136f!2sSai%20Commercial%20Centre%20Co-op.%20Society%20Ltd.!5e0!3m2!1sen!2sin!4v1703481627768!5m2!1sen!2sin"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
+    </div>
+    <footer class="footer-bg">
+        Designed & Developed by <a href="https://mithiljain.com"> &nbsp; Mithil Jain</a>
+    </footer>
 </div>
-<footer>
-    Designed & Developed by <a href="https://mithiljain.com"> &nbsp;Mithil Jain</a>
-</footer>
 </body>
 </html>
 
