--- a/index.html
+++ b/index.html
@@ -269,8 +269,8 @@
             </div>
         </section>
     </div>
-    <div class="section footer-bg">
-        <div class="contact-us">
+    <div class="section footer-bg" id="footer">
+        <div class="contact-us" >
             <div class="content-side">
                 <p class="content-title gradient-text">Reach out!</p>
                 <p class="address"><b>Address:</b> &nbsp; 114, Sai Commercial Building, BKS Devshi Marg, Deonar,
@@ -286,10 +286,11 @@
             </div>
         </div>
     </div>
+    <footer class="footer-bg">
+        Designed & Developed by <a href="https://mithiljain.com"> &nbsp; Mithil Jain</a>
+    </footer>
 </div>
-<footer class="footer-bg">
-    Designed & Developed by <a href="https://mithiljain.com"> &nbsp; Mithil Jain</a>
-</footer>
+
 </body>
 </html>
 
