--- a/about.html
+++ b/about.html
@@ -95,8 +95,10 @@
         <section id="leadership">
             <div class="container">
                 <div class="main">
-                    <p class="title gradient-text">LEADERSHIP</p>
-                    <p class="desc">Write some content related to the leadership of both of them</p>
+                    <div class="head">
+                        <p class="title gradient-text">LEADERSHIP</p>
+                        <p class="desc">Write some content related to the leadership of both of them</p>
+                    </div>
                     <div class="leaders">
                         <div class="leader">
                             <div class="img">
